--- a/public/css/misestilos.css
+++ b/public/css/misestilos.css
@@ -1,3 +1,18 @@
 .color1{
 	background-color: #330000 ;
 }
+
+.sombra1 {
+    color: white;
+    text-shadow: 4px 4px 4px black;
+}
+
+
+.sombra2{
+    color: white;
+    text-shadow: 2px 2px 1px black;
+}
+
+.sombra3{
+    box-shadow: 10px 10px 5px grey;
+}
